--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 
 <head>
     <meta charset=utf-8/>
+    <link rel="stylesheet" href="style.css">
+    <script src='d3.v6.1.1/d3.min.js'></script>
+    <title>ic-08</title>
 </head>
 
 
 <body>
+    <h1 class="centered"> D3 Part 2</h1>
+    <div id="vis1"></div>
 
+    
+
+    <script src="main.js"></script>
 
 </body>
 
